text overflow is fixed for DisplayPosts component

--- a/src/Components/DisplayPosts/DisplayPosts.css
+++ b/src/Components/DisplayPosts/DisplayPosts.css
@@ -20,6 +20,7 @@
 .text-field {
   width: 90%;
   display: inline;
+  overflow-wrap: anywhere;
 }
 
 .name-text {
